@@ -19,7 +19,6 @@
  */
 package org.sonarsource.sonarlint.core;
 
-import java.util.stream.Collectors;
 import org.sonarsource.sonarlint.core.analysis.RuleDetailsForAnalysis;
 import org.sonarsource.sonarlint.core.commons.NewCodeDefinition;
 import org.sonarsource.sonarlint.core.rpc.protocol.backend.analysis.GetRuleDetailsResponse;
@@ -48,20 +47,17 @@ public class DtoMapper {
       RuleDetailsAdapter.adapt(ruleDetails.getType()),
       RuleDetailsAdapter.adapt(ruleDetails.getCleanCodeAttribute()),
       ruleDetails.getImpacts().entrySet().stream().map(entry -> new ImpactDto(RuleDetailsAdapter.adapt(entry.getKey()), RuleDetailsAdapter.adapt(entry.getValue())))
-        .collect(Collectors.toList()), RuleDetailsAdapter.adapt(ruleDetails.getVulnerabilityProbability()));
+        .toList(), RuleDetailsAdapter.adapt(ruleDetails.getVulnerabilityProbability()));
   }
 
   public static RaisedIssueDto toRaisedIssueDto(TrackedIssue issue, NewCodeDefinition newCodeDefinition, boolean isMQRMode) {
     return new RaisedIssueDto(issue.getId(), issue.getServerKey(), issue.getRuleKey(), issue.getMessage(),
       isMQRMode ? Either.forRight(new MQRModeDetails(RuleDetailsAdapter.adapt(issue.getCleanCodeAttribute()), RuleDetailsAdapter.toDto(issue.getImpacts())))
         : Either.forLeft(new StandardModeDetails(RuleDetailsAdapter.adapt(issue.getSeverity()), RuleDetailsAdapter.adapt(issue.getType()))),
-      RuleDetailsAdapter.adapt(issue.getSeverity()),
-      RuleDetailsAdapter.adapt(issue.getType()),
-      RuleDetailsAdapter.adapt(issue.getCleanCodeAttribute()), RuleDetailsAdapter.toDto(issue.getImpacts()),
       requireNonNull(issue.getIntroductionDate()), newCodeDefinition.isOnNewCode(issue.getIntroductionDate()), issue.isResolved(),
       toTextRangeDto(issue.getTextRangeWithHash()),
-      issue.getFlows().stream().map(RuleDetailsAdapter::adapt).collect(Collectors.toList()),
-      issue.getQuickFixes().stream().map(RuleDetailsAdapter::adapt).collect(Collectors.toList()),
+      issue.getFlows().stream().map(RuleDetailsAdapter::adapt).toList(),
+      issue.getQuickFixes().stream().map(RuleDetailsAdapter::adapt).toList(),
       issue.getRuleDescriptionContextKey());
   }
 
@@ -72,13 +68,10 @@ public class DtoMapper {
       isMQRMode && !issue.getImpacts().isEmpty() ?
         Either.forRight(new MQRModeDetails(RuleDetailsAdapter.adapt(issue.getCleanCodeAttribute()), RuleDetailsAdapter.toDto(issue.getImpacts())))
         : Either.forLeft(new StandardModeDetails(RuleDetailsAdapter.adapt(issue.getSeverity()), RuleDetailsAdapter.adapt(issue.getType()))),
-      RuleDetailsAdapter.adapt(issue.getSeverity()),
-      RuleDetailsAdapter.adapt(issue.getType()),
-      RuleDetailsAdapter.adapt(issue.getCleanCodeAttribute()), RuleDetailsAdapter.toDto(issue.getImpacts()),
       requireNonNull(issue.getIntroductionDate()), newCodeDefinition.isOnNewCode(issue.getIntroductionDate()), issue.isResolved(),
       toTextRangeDto(issue.getTextRangeWithHash()),
-      issue.getFlows().stream().map(RuleDetailsAdapter::adapt).collect(Collectors.toList()),
-      issue.getQuickFixes().stream().map(RuleDetailsAdapter::adapt).collect(Collectors.toList()),
+      issue.getFlows().stream().map(RuleDetailsAdapter::adapt).toList(),
+      issue.getQuickFixes().stream().map(RuleDetailsAdapter::adapt).toList(),
       issue.getRuleDescriptionContextKey(), RuleDetailsAdapter.adapt(issue.getVulnerabilityProbability()), status);
   }
 
