@@ -26,14 +26,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
-import javax.inject.Named;
-import javax.inject.Singleton;
 import org.sonarsource.sonarlint.core.commons.log.SonarLintLogger;
 import org.sonarsource.sonarlint.core.commons.progress.SonarLintCancelMonitor;
-import org.sonarsource.sonarlint.core.rpc.protocol.common.Either;
 import org.sonarsource.sonarlint.core.rpc.protocol.backend.connection.org.OrganizationDto;
+import org.sonarsource.sonarlint.core.rpc.protocol.common.Either;
 import org.sonarsource.sonarlint.core.rpc.protocol.common.TokenDto;
 import org.sonarsource.sonarlint.core.rpc.protocol.common.UsernamePasswordDto;
 
@@ -42,41 +39,40 @@ import static org.sonarsource.sonarlint.core.commons.log.SonarLintLogger.singleP
 /**
  * Cache user organizations index for a certain amount of time.
  */
-@Named
-@Singleton
 public class OrganizationsCache {
 
   private static final SonarLintLogger LOG = SonarLintLogger.get();
-  private final ServerApiProvider serverApiProvider;
+  private final ConnectionManager connectionManager;
 
   private final Cache<Either<TokenDto, UsernamePasswordDto>, TextSearchIndex<OrganizationDto>> textSearchIndexCacheByCredentials = CacheBuilder.newBuilder()
     .expireAfterWrite(5, TimeUnit.MINUTES)
     .build();
 
-  public OrganizationsCache(ServerApiProvider serverApiProvider) {
-    this.serverApiProvider = serverApiProvider;
+  public OrganizationsCache(ConnectionManager connectionManager) {
+    this.connectionManager = connectionManager;
   }
 
-  public List<OrganizationDto> fuzzySearchOrganizations(Either<TokenDto, UsernamePasswordDto> credentials, String searchText, SonarLintCancelMonitor cancelMonitor) {
-    return getTextSearchIndex(credentials, cancelMonitor).search(searchText)
+  public List<OrganizationDto> fuzzySearchOrganizations(Either<TokenDto, UsernamePasswordDto> credentials, String searchText,
+    SonarCloudRegion region, SonarLintCancelMonitor cancelMonitor) {
+    return getTextSearchIndex(credentials, region, cancelMonitor).search(searchText)
       .entrySet()
       .stream()
       .sorted(Comparator.comparing(Map.Entry<OrganizationDto, Double>::getValue).reversed()
         .thenComparing(e -> e.getKey().getName(), String.CASE_INSENSITIVE_ORDER))
       .limit(10)
       .map(Map.Entry::getKey)
-      .collect(Collectors.toList());
+      .toList();
   }
 
-  public TextSearchIndex<OrganizationDto> getTextSearchIndex(Either<TokenDto, UsernamePasswordDto> credentials, SonarLintCancelMonitor cancelMonitor) {
+  public TextSearchIndex<OrganizationDto> getTextSearchIndex(Either<TokenDto, UsernamePasswordDto> credentials, SonarCloudRegion region, SonarLintCancelMonitor cancelMonitor) {
     try {
       return textSearchIndexCacheByCredentials.get(credentials, () -> {
         LOG.debug("Load user organizations...");
         List<OrganizationDto> orgs;
         try {
-          var serverApi = serverApiProvider.getForSonarCloudNoOrg(credentials);
+          var serverApi = connectionManager.getForSonarCloudNoOrg(credentials, region);
           var serverOrganizations = serverApi.organization().listUserOrganizations(cancelMonitor);
-          orgs = serverOrganizations.stream().map(o -> new OrganizationDto(o.getKey(), o.getName(), o.getDescription())).collect(Collectors.toList());
+          orgs = serverOrganizations.stream().map(o -> new OrganizationDto(o.getKey(), o.getName(), o.getDescription())).toList();
         } catch (Exception e) {
           LOG.error("Error while querying SonarCloud organizations", e);
           return new TextSearchIndex<>();
@@ -96,14 +92,14 @@ public class OrganizationsCache {
     }
   }
 
-  public List<OrganizationDto> listUserOrganizations(Either<TokenDto, UsernamePasswordDto> credentials, SonarLintCancelMonitor cancelMonitor) {
+  public List<OrganizationDto> listUserOrganizations(Either<TokenDto, UsernamePasswordDto> credentials, SonarCloudRegion region, SonarLintCancelMonitor cancelMonitor) {
     textSearchIndexCacheByCredentials.invalidate(credentials);
-    return getTextSearchIndex(credentials, cancelMonitor).getAll();
+    return getTextSearchIndex(credentials, region, cancelMonitor).getAll();
   }
 
   @CheckForNull
-  public OrganizationDto getOrganization(Either<TokenDto, UsernamePasswordDto> credentials, String organizationKey, SonarLintCancelMonitor cancelMonitor) {
-    var helper = serverApiProvider.getForSonarCloudNoOrg(credentials);
+  public OrganizationDto getOrganization(Either<TokenDto, UsernamePasswordDto> credentials, String organizationKey, SonarCloudRegion region, SonarLintCancelMonitor cancelMonitor) {
+    var helper = connectionManager.getForSonarCloudNoOrg(credentials, region);
     var serverOrganization = helper.organization().getOrganization(organizationKey, cancelMonitor);
     return serverOrganization.map(o -> new OrganizationDto(o.getKey(), o.getName(), o.getDescription())).orElse(null);
   }
