@@ -46,8 +46,6 @@ import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import javax.annotation.PreDestroy;
-import javax.inject.Named;
-import javax.inject.Singleton;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
 import org.sonarsource.sonarlint.core.analysis.api.ActiveRule;
@@ -66,6 +64,7 @@ import org.sonarsource.sonarlint.core.commons.RuleType;
 import org.sonarsource.sonarlint.core.commons.api.SonarLanguage;
 import org.sonarsource.sonarlint.core.commons.api.TextRange;
 import org.sonarsource.sonarlint.core.commons.log.SonarLintLogger;
+import org.sonarsource.sonarlint.core.commons.monitoring.MonitoringService;
 import org.sonarsource.sonarlint.core.commons.progress.ProgressMonitor;
 import org.sonarsource.sonarlint.core.commons.progress.SonarLintCancelMonitor;
 import org.sonarsource.sonarlint.core.event.BindingConfigChangedEvent;
@@ -93,7 +92,6 @@ import org.sonarsource.sonarlint.core.rpc.protocol.backend.analysis.NodeJsDetail
 import org.sonarsource.sonarlint.core.rpc.protocol.backend.initialize.InitializeParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.analysis.DidChangeAnalysisReadinessParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.analysis.DidDetectSecretParams;
-import org.sonarsource.sonarlint.core.rpc.protocol.client.analysis.DidRaiseIssueParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.analysis.FileEditDto;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.analysis.GetInferredAnalysisPropertiesParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.analysis.QuickFixDto;
@@ -123,7 +121,6 @@ import static java.util.Optional.ofNullable;
 import static java.util.function.Predicate.not;
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.mapping;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Collectors.toSet;
 import static org.apache.commons.lang3.StringUtils.trimToNull;
@@ -132,8 +129,6 @@ import static org.sonarsource.sonarlint.core.commons.util.StringUtils.pluralize;
 import static org.sonarsource.sonarlint.core.commons.util.git.GitUtils.createSonarLintGitIgnore;
 import static org.sonarsource.sonarlint.core.commons.util.git.GitUtils.getVSCChangedFiles;
 
-@Named
-@Singleton
 public class AnalysisService {
 
   private static final SonarLintLogger LOG = SonarLintLogger.get();
@@ -158,6 +153,7 @@ public class AnalysisService {
   private final Map<String, Boolean> analysisReadinessByConfigScopeId = new ConcurrentHashMap<>();
   private final OpenFilesRepository openFilesRepository;
   private final ClientFileSystemService clientFileSystemService;
+  private final MonitoringService monitoringService;
   private boolean automaticAnalysisEnabled;
   private final Path esLintBridgeServerPath;
   private final ScheduledExecutorService scheduledAnalysisExecutor = Executors.newSingleThreadScheduledExecutor(r -> new Thread(r, "SonarLint Analysis Executor"));
@@ -167,7 +163,8 @@ public class AnalysisService {
     ConnectionConfigurationRepository connectionConfigurationRepository, InitializeParams initializeParams, NodeJsService nodeJsService,
     AnalysisEngineCache engineCache, ClientFileSystemService fileSystemService, FileExclusionService fileExclusionService,
     ApplicationEventPublisher eventPublisher,
-    UserAnalysisPropertiesRepository clientAnalysisPropertiesRepository, OpenFilesRepository openFilesRepository, ClientFileSystemService clientFileSystemService) {
+    UserAnalysisPropertiesRepository clientAnalysisPropertiesRepository, OpenFilesRepository openFilesRepository, ClientFileSystemService clientFileSystemService,
+    MonitoringService monitoringService) {
     this.client = client;
     this.configurationRepository = configurationRepository;
     this.languageSupportRepository = languageSupportRepository;
@@ -187,6 +184,7 @@ public class AnalysisService {
     this.openFilesRepository = openFilesRepository;
     this.automaticAnalysisEnabled = initializeParams.isAutomaticAnalysisEnabled();
     this.clientFileSystemService = clientFileSystemService;
+    this.monitoringService = monitoringService;
     this.esLintBridgeServerPath = initializeParams.getLanguageSpecificRequirements() != null && initializeParams.getLanguageSpecificRequirements().getJsTsRequirements() != null ?
       initializeParams.getLanguageSpecificRequirements().getJsTsRequirements().getBundlePath() : null;
   }
@@ -232,7 +230,7 @@ public class AnalysisService {
     var pluginPaths = pluginsService.getEmbeddedPluginPaths();
     var activeNodeJs = nodeJsService.getActiveNodeJs();
     var nodeJsDetailsDto = activeNodeJs == null ? null : new NodeJsDetailsDto(activeNodeJs.getPath(), activeNodeJs.getVersion().toString());
-    return new GetGlobalConfigurationResponse(pluginPaths, enabledLanguages.stream().map(AnalysisService::toDto).collect(toList()), nodeJsDetailsDto, false);
+    return new GetGlobalConfigurationResponse(pluginPaths, enabledLanguages.stream().map(AnalysisService::toDto).toList(), nodeJsDetailsDto, false);
   }
 
   public GetGlobalConfigurationResponse getGlobalConnectedConfiguration(String connectionId) {
@@ -240,7 +238,7 @@ public class AnalysisService {
     var pluginPaths = pluginsService.getConnectedPluginPaths(connectionId);
     var activeNodeJs = nodeJsService.getActiveNodeJs();
     var nodeJsDetailsDto = activeNodeJs == null ? null : new NodeJsDetailsDto(activeNodeJs.getPath(), activeNodeJs.getVersion().toString());
-    return new GetGlobalConfigurationResponse(pluginPaths, enabledLanguages.stream().map(AnalysisService::toDto).collect(toList()), nodeJsDetailsDto,
+    return new GetGlobalConfigurationResponse(pluginPaths, enabledLanguages.stream().map(AnalysisService::toDto).toList(), nodeJsDetailsDto,
       isDataflowBugDetectionEnabled);
   }
 
@@ -287,7 +285,7 @@ public class AnalysisService {
         ar.setParams(r.getParams());
         ar.setTemplateRuleKey(r.getTemplateRuleKey());
         return ar;
-      }).collect(toList()))
+      }).toList())
       .setBaseDir(actualBaseDir)
       .build();
   }
@@ -305,7 +303,7 @@ public class AnalysisService {
   }
 
   private static Path findCommonPrefix(List<URI> uris) {
-    var paths = uris.stream().map(Paths::get).collect(toList());
+    var paths = uris.stream().map(Paths::get).toList();
     Path currentPrefixCandidate = paths.get(0).getParent();
     while (currentPrefixCandidate.getNameCount() > 0 && !isPrefixForAll(currentPrefixCandidate, paths)) {
       currentPrefixCandidate = currentPrefixCandidate.getParent();
@@ -354,7 +352,7 @@ public class AnalysisService {
       // Jupyter Notebooks are not yet fully supported in connected mode, use standalone rule configuration in the meantime
       var iPythonRules = buildStandaloneActiveRules()
         .stream().filter(rule -> rule.getLanguageKey().equals(SonarLanguage.IPYTHON.getSonarLanguageKey()))
-        .collect(toList());
+        .toList();
       result.addAll(iPythonRules);
     }
     return result;
@@ -434,16 +432,16 @@ public class AnalysisService {
 
     var allRulesDefinitions = rulesRepository.getEmbeddedRules().stream()
       .filter(rule -> !rule.getType().equals(RuleType.SECURITY_HOTSPOT))
-      .collect(toList());
+      .toList();
 
     filteredActiveRules.addAll(allRulesDefinitions.stream()
       .filter(SonarLintRuleDefinition::isActiveByDefault)
       .filter(isExcludedByConfiguration(excludedRules))
-      .collect(toList()));
+      .toList());
     filteredActiveRules.addAll(allRulesDefinitions.stream()
       .filter(r -> !r.isActiveByDefault())
       .filter(isIncludedByConfiguration(includedRules))
-      .collect(toList()));
+      .toList());
 
     return filteredActiveRules.stream().map(rd -> {
       Map<String, String> effectiveParams = new HashMap<>(rd.getDefaultParams());
@@ -451,7 +449,7 @@ public class AnalysisService {
       // No template rules in standalone mode
       return new ActiveRuleDto(rd.getKey(), rd.getLanguage().getSonarLanguageKey(), effectiveParams, null);
     })
-      .collect(toList());
+      .toList();
   }
 
   private static Predicate<? super SonarLintRuleDefinition> isExcludedByConfiguration(Set<String> excludedRules) {
@@ -658,7 +656,8 @@ public class AnalysisService {
     var raisedIssues = new ArrayList<RawIssue>();
     eventPublisher.publishEvent(new AnalysisStartedEvent(configurationScopeId, analysisId, analysisConfig.inputFiles(), enableTracking));
     var analyzeCommand = new AnalyzeCommand(configurationScopeId, analysisConfig,
-      issue -> streamIssue(configurationScopeId, analysisId, issue, ruleDetailsCache, raisedIssues, enableTracking), SonarLintLogger.getTargetForCopy());
+      issue -> streamIssue(configurationScopeId, analysisId, issue, ruleDetailsCache, raisedIssues, enableTracking), SonarLintLogger.getTargetForCopy(),
+      monitoringService.newTrace("AnalysisService", "analyze"));
     var rpcProgressMonitor = new RpcProgressMonitor(client, cancelMonitor, configurationScopeId, analysisId);
     return analysisEngine.post(analyzeCommand, rpcProgressMonitor)
       .whenComplete((results, error) -> {
@@ -670,7 +669,7 @@ public class AnalysisService {
           logSummary(raisedIssues, analysisDuration);
           eventPublisher.publishEvent(new AnalysisFinishedEvent(analysisId, configurationScopeId, analysisDuration,
             languagePerFile, results.failedAnalysisFiles().isEmpty(), raisedIssues, enableTracking, shouldFetchServerIssues));
-          results.setRawIssues(raisedIssues.stream().map(issue -> toDto(issue.getIssue(), issue.getActiveRule())).collect(toList()));
+          results.setRawIssues(raisedIssues.stream().map(issue -> toDto(issue.getIssue(), issue.getActiveRule())).toList());
         } else {
           LOG.error("Error during analysis", error);
         }
@@ -679,7 +678,7 @@ public class AnalysisService {
 
   private static void logSummary(ArrayList<RawIssue> rawIssues, long analysisDuration) {
     // ignore project-level issues for now
-    var fileRawIssues = rawIssues.stream().filter(issue -> issue.getTextRange() != null).collect(toList());
+    var fileRawIssues = rawIssues.stream().filter(issue -> issue.getTextRange() != null).toList();
     var issuesCount = fileRawIssues.stream().filter(not(RawIssue::isSecurityHotspot)).count();
     var hotspotsCount = fileRawIssues.stream().filter(RawIssue::isSecurityHotspot).count();
     LOG.info("Analysis detected {} and {} in {}ms", pluralize(issuesCount, "issue"), pluralize(hotspotsCount, "Security Hotspot"), analysisDuration);
@@ -698,7 +697,6 @@ public class AnalysisService {
     if (activeRule != null) {
       var rawIssue = new RawIssue(issue, activeRule);
       rawIssues.add(rawIssue);
-      client.didRaiseIssue(new DidRaiseIssueParams(configScopeId, analysisId, toDto(issue, activeRule)));
       if (ruleKey.contains("secrets")) {
         client.didDetectSecret(new DidDetectSecretParams(configScopeId));
       }
@@ -727,9 +725,9 @@ public class AnalysisService {
         var locationInputFile = location.getInputFile();
         var locationFileUri = locationInputFile == null ? null : locationInputFile.uri();
         return new RawIssueLocationDto(locationTextRangeDto, location.getMessage(), locationFileUri);
-      }).collect(toList());
+      }).toList();
       return new RawIssueFlowDto(locations);
-    }).collect(toList());
+    }).toList();
     return new RawIssueDto(
       RuleDetailsAdapter.adapt(activeRule.getSeverity()),
       RuleDetailsAdapter.adapt(activeRule.getType()),
@@ -743,10 +741,10 @@ public class AnalysisService {
         .map(quickFix -> new QuickFixDto(
           quickFix.inputFileEdits().stream()
             .map(fileEdit -> new FileEditDto(fileEdit.target().uri(),
-              fileEdit.textEdits().stream().map(textEdit -> new TextEditDto(adapt(textEdit.range()), textEdit.newText())).collect(toList())))
-            .collect(toList()),
+              fileEdit.textEdits().stream().map(textEdit -> new TextEditDto(adapt(textEdit.range()), textEdit.newText())).toList()))
+            .toList(),
           quickFix.message()))
-        .collect(toList()),
+        .toList(),
       textRange,
       issue.getRuleDescriptionContextKey().orElse(null),
       RuleDetailsAdapter.adapt(activeRule.getVulnerabilityProbability()));
@@ -823,7 +821,7 @@ public class AnalysisService {
         return inputFile;
       })
       .filter(Objects::nonNull)
-      .collect(toList());
+      .toList();
 
     // Log all the filtered out URIs but not for the filters where there were none
     logFilteredURIs("Filtered out URIs based on the exclusion service", filteredURIsFromExclusionService);
@@ -872,7 +870,7 @@ public class AnalysisService {
 
   public UUID analyzeFullProject(String configScopeId, boolean hotspotsOnly) {
     var files = clientFileSystemService.getFiles(configScopeId);
-    return triggerForcedAnalysis(configScopeId, files.stream().map(ClientFile::getUri).collect(Collectors.toList()), hotspotsOnly);
+    return triggerForcedAnalysis(configScopeId, files.stream().map(ClientFile::getUri).toList(), hotspotsOnly);
   }
 
   public UUID analyzeFileList(String configScopeId, List<URI> filesToAnalyze) {
