@@ -23,10 +23,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
-import javax.inject.Named;
-import javax.inject.Singleton;
 import org.sonarsource.sonarlint.core.analysis.AnalysisFinishedEvent;
 import org.sonarsource.sonarlint.core.commons.api.SonarLanguage;
 import org.sonarsource.sonarlint.core.plugin.commons.api.SkipReason;
@@ -36,8 +33,6 @@ import org.sonarsource.sonarlint.core.rpc.protocol.client.plugin.DidSkipLoadingP
 import org.sonarsource.sonarlint.core.rpc.protocol.common.Language;
 import org.springframework.context.event.EventListener;
 
-@Named
-@Singleton
 public class SkippedPluginsNotifierService {
   private final SkippedPluginsRepository skippedPluginsRepository;
   private final ConfigurationRepository configurationRepository;
@@ -67,8 +62,7 @@ public class SkippedPluginsNotifierService {
         .findFirst()
         .ifPresent(skippedPlugin -> {
           var skipReason = skippedPlugin.getReason();
-          if (skipReason instanceof SkipReason.UnsatisfiedRuntimeRequirement) {
-            var runtimeRequirement = (SkipReason.UnsatisfiedRuntimeRequirement) skipReason;
+          if (skipReason instanceof SkipReason.UnsatisfiedRuntimeRequirement runtimeRequirement) {
             var rpcLanguage = Language.valueOf(sonarLanguage.name());
             var rpcSkipReason = runtimeRequirement.getRuntime() == SkipReason.UnsatisfiedRuntimeRequirement.RuntimeRequirement.JRE
               ? DidSkipLoadingPluginParams.SkipReason.UNSATISFIED_JRE
@@ -83,7 +77,7 @@ public class SkippedPluginsNotifierService {
   private List<SkippedPlugin> getSkippedPluginsToNotify(String configurationScopeId) {
     var skippedPlugins = getSkippedPlugins(configurationScopeId);
     if (skippedPlugins != null) {
-      return skippedPlugins.stream().filter(skippedPlugin -> !alreadyNotifiedPluginKeys.contains(skippedPlugin.getKey())).collect(Collectors.toList());
+      return skippedPlugins.stream().filter(skippedPlugin -> !alreadyNotifiedPluginKeys.contains(skippedPlugin.getKey())).toList();
     }
     return List.of();
   }
