@@ -23,15 +23,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
-import javax.inject.Named;
-import javax.inject.Singleton;
 import org.sonarsource.sonarlint.core.commons.ConnectionKind;
 import org.sonarsource.sonarlint.core.serverapi.EndpointParams;
 
-@Named
-@Singleton
 public class ConnectionConfigurationRepository {
 
   private final Map<String, AbstractConnectionConfiguration> connectionsById = new ConcurrentHashMap<>();
@@ -87,13 +82,13 @@ public class ConnectionConfigurationRepository {
   public List<AbstractConnectionConfiguration> findByUrl(String serverUrl) {
     return connectionsById.values().stream()
       .filter(connection -> connection.isSameServerUrl(serverUrl))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   public List<AbstractConnectionConfiguration> findByOrganization(String organization) {
     return connectionsById.values().stream()
       .filter(connection -> connection.getKind() == ConnectionKind.SONARCLOUD)
       .filter(scConnection -> ((SonarCloudConnectionConfiguration) scConnection).getOrganization().equals(organization))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
