@@ -36,6 +36,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
@@ -132,6 +133,7 @@ public class ServerFixture {
     private ServerStatus serverStatus = ServerStatus.UP;
     private boolean smartNotificationsSupported;
     private final List<String> tokensRegistered = new ArrayList<>();
+    private Integer statusCode = 200;
 
     public ServerBuilder(@Nullable Consumer<Server> onStart, ServerKind serverKind, @Nullable String organizationKey, @Nullable String version) {
       this.onStart = onStart;
@@ -186,9 +188,15 @@ public class ServerFixture {
       return this;
     }
 
+    public ServerBuilder withResponseCode(Integer status) {
+      this.statusCode = status;
+      return this;
+    }
+
     public Server start() {
-      var server = new Server(serverKind, serverStatus, organizationKey, version, projectByProjectKey, smartNotificationsSupported, pluginsByKey, qualityProfilesByKey,
-        tokensRegistered);
+      var server = new Server(serverKind, serverStatus, organizationKey, version, projectByProjectKey, smartNotificationsSupported, pluginsByKey,
+        qualityProfilesByKey,
+        tokensRegistered, statusCode);
       server.start();
       if (onStart != null) {
         onStart.accept(server);
@@ -538,11 +546,12 @@ public class ServerFixture {
     private final Map<String, ServerBuilder.ServerPluginBuilder> pluginsByKey;
     private final Map<String, ServerBuilder.ServerQualityProfileBuilder> qualityProfilesByKey;
     private final List<String> tokensRegistered;
+    private final Integer statusCode;
 
     public Server(ServerKind serverKind, ServerStatus serverStatus, @Nullable String organizationKey, @Nullable String version,
       Map<String, ServerBuilder.ServerProjectBuilder> projectsByProjectKey,
       boolean smartNotificationsSupported, Map<String, ServerBuilder.ServerPluginBuilder> pluginsByKey,
-      Map<String, ServerBuilder.ServerQualityProfileBuilder> qualityProfilesByKey, List<String> tokensRegistered) {
+      Map<String, ServerBuilder.ServerQualityProfileBuilder> qualityProfilesByKey, List<String> tokensRegistered, Integer statusCode) {
       this.serverKind = serverKind;
       this.serverStatus = serverStatus;
       this.organizationKey = organizationKey;
@@ -552,6 +561,7 @@ public class ServerFixture {
       this.pluginsByKey = pluginsByKey;
       this.qualityProfilesByKey = qualityProfilesByKey;
       this.tokensRegistered = tokensRegistered;
+      this.statusCode = statusCode;
     }
 
     public void start() {
@@ -590,8 +600,11 @@ public class ServerFixture {
     }
 
     public void registerSystemApiResponses() {
+      // API is public, so it can't return 401 or 403 status
+      var statusesToSkip = Set.of(401, 403);
+      var status = statusesToSkip.contains(statusCode) ? 200 : statusCode;
       mockServer.stubFor(get("/api/system/status")
-        .willReturn(aResponse().withStatus(200).withBody("{\"id\": \"20160308094653\",\"version\": \"" + version + "\",\"status\": " +
+        .willReturn(aResponse().withStatus(status).withBody("{\"id\": \"20160308094653\",\"version\": \"" + version + "\",\"status\": " +
           "\"" + serverStatus + "\"}")));
     }
 
@@ -602,7 +615,7 @@ public class ServerFixture {
 
     private void registerPluginsInstalledResponses() {
       mockServer.stubFor(get("/api/plugins/installed")
-        .willReturn(aResponse().withStatus(200).withBody("{\"plugins\": [" +
+        .willReturn(aResponse().withStatus(statusCode).withBody("{\"plugins\": [" +
           pluginsByKey.entrySet().stream().map(
             entry -> {
               var pluginKey = entry.getKey();
@@ -620,7 +633,7 @@ public class ServerFixture {
         try {
           var pluginContent = Files.exists(plugin.jarPath) ? Files.readAllBytes(plugin.jarPath) : new byte[0];
           mockServer.stubFor(get("/api/plugins/download?plugin=" + pluginKey)
-            .willReturn(aResponse().withStatus(200).withBody(pluginContent)));
+            .willReturn(aResponse().withStatus(statusCode).withBody(pluginContent)));
         } catch (IOException e) {
           throw new RuntimeException(e);
         }
@@ -634,7 +647,7 @@ public class ServerFixture {
           urlBuilder.append("&organization=").append(organizationKey);
         }
         mockServer.stubFor(get(urlBuilder.toString())
-          .willReturn(aResponse().withStatus(200).withResponseBody(protobufBody(Qualityprofiles.SearchWsResponse.newBuilder().addAllProfiles(
+          .willReturn(aResponse().withStatus(statusCode).withResponseBody(protobufBody(Qualityprofiles.SearchWsResponse.newBuilder().addAllProfiles(
             project.qualityProfileKeys.stream().map(qualityProfileKey -> {
               var qualityProfile = qualityProfilesByKey.get(qualityProfileKey);
               return Qualityprofiles.SearchWsResponse.QualityProfile.newBuilder()
@@ -647,7 +660,7 @@ public class ServerFixture {
                 .setIsDefault(true)
                 .setActiveRuleCount(qualityProfile.activeRulesByKey.size())
                 .build();
-            }).collect(toList())).build()))));
+            }).toList()).build()))));
       });
     }
 
@@ -659,11 +672,11 @@ public class ServerFixture {
         }
         url += "&activation=true&f=templateKey,actives&types=CODE_SMELL,BUG,VULNERABILITY,SECURITY_HOTSPOT&s=key&ps=500&p=1";
         mockServer.stubFor(get(url)
-          .willReturn(aResponse().withStatus(200).withResponseBody(protobufBody(Rules.SearchResponse.newBuilder()
+          .willReturn(aResponse().withStatus(statusCode).withResponseBody(protobufBody(Rules.SearchResponse.newBuilder()
             .addAllRules(qualityProfile.activeRulesByKey.entrySet().stream().map(entry -> Rules.Rule.newBuilder()
               .setKey(entry.getKey())
               .setSeverity(entry.getValue().issueSeverity.name())
-              .build()).collect(toList()))
+              .build()).toList())
             .setActives(Rules.Actives.newBuilder()
               .putAllActives(qualityProfile.activeRulesByKey.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, entry -> Rules.ActiveList.newBuilder()
                 .addActiveList(Rules.Active.newBuilder().setSeverity(entry.getValue().issueSeverity.name()).build()).build())))
@@ -679,11 +692,11 @@ public class ServerFixture {
       }
       url += "&f=repo&s=key&ps=500&p=1";
       mockServer.stubFor(get(url)
-        .willReturn(aResponse().withStatus(200).withResponseBody(protobufBody(Rules.SearchResponse.newBuilder()
+        .willReturn(aResponse().withStatus(statusCode).withResponseBody(protobufBody(Rules.SearchResponse.newBuilder()
           .addAllRules(taintActiveRulesByKey.entrySet().stream().map(entry -> Rules.Rule.newBuilder()
             .setKey(entry.getKey())
             .setSeverity(entry.getValue().issueSeverity.name())
-            .build()).collect(toList()))
+            .build()).toList())
           .setActives(Rules.Actives.newBuilder()
             .putAllActives(taintActiveRulesByKey.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, entry -> Rules.ActiveList.newBuilder()
               .addActiveList(Rules.Active.newBuilder().setSeverity(entry.getValue().issueSeverity.name()).build()).build())))
@@ -691,13 +704,13 @@ public class ServerFixture {
           .setPaging(Common.Paging.newBuilder().setTotal(taintActiveRulesByKey.size()).build())
           .build()))));
 
-      var activeRules = qualityProfilesByKey.values().stream().flatMap(qp -> qp.activeRulesByKey.entrySet().stream()).collect(toList());
+      var activeRules = qualityProfilesByKey.values().stream().flatMap(qp -> qp.activeRulesByKey.entrySet().stream()).toList();
       activeRules.forEach(entry -> {
         var ruleKey = entry.getKey();
         var rule = entry.getValue();
         var rulesShowUrl = "/api/rules/show.protobuf?key=" + ruleKey;
         mockServer.stubFor(get(rulesShowUrl)
-          .willReturn(aResponse().withStatus(200).withResponseBody(protobufBody(Rules.ShowResponse.newBuilder()
+          .willReturn(aResponse().withStatus(statusCode).withResponseBody(protobufBody(Rules.ShowResponse.newBuilder()
             .setRule(Rules.Rule.newBuilder()
               .setKey(ruleKey)
               .setName("fakeName")
@@ -717,11 +730,11 @@ public class ServerFixture {
 
     private void registerProjectBranchesApiResponses() {
       projectsByProjectKey.forEach((projectKey, project) -> mockServer.stubFor(get("/api/project_branches/list.protobuf?project=" + projectKey)
-        .willReturn(aResponse().withStatus(200).withResponseBody(protobufBody(ProjectBranches.ListWsResponse.newBuilder()
+        .willReturn(aResponse().withStatus(statusCode).withResponseBody(protobufBody(ProjectBranches.ListWsResponse.newBuilder()
           .addAllBranches(project.branchesByName.keySet().stream()
             .filter(Objects::nonNull)
             .map(branchName -> ProjectBranches.Branch.newBuilder().setName(branchName).setIsMain(project.mainBranchName.equals(branchName)).setType(Common.BranchType.LONG).build())
-            .collect(Collectors.toList()))
+            .toList())
           .build())))));
     }
 
@@ -769,11 +782,11 @@ public class ServerFixture {
               .addAllHotspots(messages)
               .setPaging(Common.Paging.newBuilder().setTotal(messages.size()).build())
               .build())))));
-        var allMessages = messagesPerFilePath.values().stream().flatMap(Collection::stream).collect(toList());
+        var allMessages = messagesPerFilePath.values().stream().flatMap(Collection::stream).toList();
         mockServer.stubFor(get("/api/hotspots/search.protobuf?projectKey=" + projectKey + branchParameter + "&ps=500&p=1")
           .willReturn(aResponse().withResponseBody(protobufBody(Hotspots.SearchWsResponse.newBuilder()
             .addAllComponents(messagesPerFilePath.keySet().stream().map(filePath -> Hotspots.Component.newBuilder().setPath(filePath).setKey(projectKey + ":" + filePath).build())
-              .collect(toList()))
+              .toList())
             .setPaging(Common.Paging.newBuilder().setTotal(allMessages.size()).build())
             .addAllHotspots(allMessages).build()))));
       }));
@@ -784,7 +797,7 @@ public class ServerFixture {
         project.pullRequestsByName.forEach((pullRequestName, pullRequest) -> {
           var issuesPerFilePath = getIssuesPerFilePath(projectKey, pullRequest);
 
-          var allIssues = issuesPerFilePath.values().stream().flatMap(Collection::stream).collect(toList());
+          var allIssues = issuesPerFilePath.values().stream().flatMap(Collection::stream).toList();
 
           allIssues.forEach(issue -> {
             var searchUrl = "/api/issues/search.protobuf?issues=".concat(urlEncode(issue.getKey()))
@@ -800,10 +813,10 @@ public class ServerFixture {
                     .addAllImpacts(issue.getImpactsList().stream().map(i -> Common.Impact.newBuilder()
                       .setSoftwareQuality(i.getSoftwareQuality())
                       .setSeverity(i.getSeverity())
-                      .build()).collect(toList()))
+                      .build()).toList())
                     .build())
                 .addAllComponents(
-                  issuesPerFilePath.keySet().stream().map(issues -> Issues.Component.newBuilder().setPath(issues).setKey(projectKey + ":" + issues).build()).collect(toList()))
+                  issuesPerFilePath.keySet().stream().map(issues -> Issues.Component.newBuilder().setPath(issues).setKey(projectKey + ":" + issues).build()).toList())
                 .setRules(Issues.SearchWsResponse.newBuilder().getRulesBuilder().addRules(Common.Rule.newBuilder().setKey(issue.getRule()).build()))
                 .setPaging(Common.Paging.newBuilder().setTotal(1).build())
                 .build()))));
@@ -812,7 +825,7 @@ public class ServerFixture {
         project.branchesByName.forEach((branchName, branch) -> {
           var issuesPerFilePath = getIssuesPerFilePath(projectKey, branch);
 
-          var allIssues = issuesPerFilePath.values().stream().flatMap(Collection::stream).collect(toList());
+          var allIssues = issuesPerFilePath.values().stream().flatMap(Collection::stream).toList();
 
           allIssues.forEach(issue -> {
             var searchUrl = "/api/issues/search.protobuf?issues=".concat(urlEncode(issue.getKey()))
@@ -826,13 +839,13 @@ public class ServerFixture {
                     .setKey(issue.getKey()).setRule(issue.getRule()).setCreationDate(issue.getCreationDate()).setMessage(issue.getMessage())
                     .setTextRange(issue.getTextRange()).setComponent(issue.getComponent()).setType(issue.getType()).build())
                 .addAllComponents(
-                  issuesPerFilePath.keySet().stream().map(issues -> Issues.Component.newBuilder().setPath(issues).setKey(projectKey + ":" + issues).build()).collect(toList()))
+                  issuesPerFilePath.keySet().stream().map(issues -> Issues.Component.newBuilder().setPath(issues).setKey(projectKey + ":" + issues).build()).toList())
                 .setRules(Issues.SearchWsResponse.newBuilder().getRulesBuilder().addRules(Common.Rule.newBuilder().setKey(issue.getRule()).build()))
                 .setPaging(Common.Paging.newBuilder().setTotal(1).build())
                 .build()))));
           });
 
-          var vulnerabilities = allIssues.stream().filter(issue -> issue.getType() == Common.RuleType.VULNERABILITY).collect(toList());
+          var vulnerabilities = allIssues.stream().filter(issue -> issue.getType() == Common.RuleType.VULNERABILITY).toList();
           var searchUrl = "/api/issues/search.protobuf?statuses=OPEN,CONFIRMED,REOPENED,RESOLVED&types=VULNERABILITY&componentKeys=" + projectKey + "&rules=&branch=" + branchName
             + "&ps=500&p=1";
           mockServer.stubFor(get(searchUrl)
@@ -840,9 +853,9 @@ public class ServerFixture {
               .addAllIssues(
                 vulnerabilities.stream().map(vulnerability -> Issues.Issue.newBuilder()
                   .setKey(vulnerability.getKey()).setRule(vulnerability.getRule()).setCreationDate(vulnerability.getCreationDate()).setMessage(vulnerability.getMessage())
-                  .setTextRange(vulnerability.getTextRange()).setComponent(vulnerability.getComponent()).setType(vulnerability.getType()).build()).collect(toList()))
+                  .setTextRange(vulnerability.getTextRange()).setComponent(vulnerability.getComponent()).setType(vulnerability.getType()).build()).toList())
               .addAllComponents(
-                issuesPerFilePath.keySet().stream().map(issues -> Issues.Component.newBuilder().setPath(issues).setKey(projectKey + ":" + issues).build()).collect(toList()))
+                issuesPerFilePath.keySet().stream().map(issues -> Issues.Component.newBuilder().setPath(issues).setKey(projectKey + ":" + issues).build()).toList())
               .setPaging(Common.Paging.newBuilder().setTotal(vulnerabilities.size()).build())
               .build()))));
         });
@@ -871,7 +884,7 @@ public class ServerFixture {
             .addAllImpacts(issue.impacts.entrySet().stream().map(i -> Common.Impact.newBuilder()
               .setSoftwareQuality(Common.SoftwareQuality.valueOf(i.getKey().name()))
               .setSeverity(Common.ImpactSeverity.valueOf(i.getValue().name()))
-              .build()).collect(toList()))
+              .build()).toList())
             .build(), toList())));
     }
 
@@ -935,7 +948,7 @@ public class ServerFixture {
     }
 
     private void registerHotspotsStatusChangeApiResponses() {
-      mockServer.stubFor(post("/api/hotspots/change_status").willReturn(aResponse().withStatus(200)));
+      mockServer.stubFor(post("/api/hotspots/change_status").willReturn(aResponse().withStatus(statusCode)));
     }
 
     private void registerIssuesApiResponses() {
@@ -986,11 +999,11 @@ public class ServerFixture {
     }
 
     private void registerIssuesStatusChangeApiResponses() {
-      mockServer.stubFor(post("/api/issues/do_transition").willReturn(aResponse().withStatus(200)));
+      mockServer.stubFor(post("/api/issues/do_transition").willReturn(aResponse().withStatus(statusCode)));
     }
 
     private void registerAddIssueCommentApiResponses() {
-      mockServer.stubFor(post("/api/issues/add_comment").willReturn(aResponse().withStatus(200)));
+      mockServer.stubFor(post("/api/issues/add_comment").willReturn(aResponse().withStatus(statusCode)));
     }
 
     private void registerApiIssuesPullResponses() {
@@ -1013,7 +1026,7 @@ public class ServerFixture {
           .addAllImpacts(issue.impacts.entrySet().stream().map(i -> Common.Impact.newBuilder()
             .setSoftwareQuality(Common.SoftwareQuality.valueOf(i.getKey().name()))
             .setSeverity(Common.ImpactSeverity.valueOf(i.getValue().name()))
-            .build()).collect(toList()))
+            .build()).toList())
           .build()).toArray(Issues.IssueLite[]::new);
         var messages = new Message[issuesArray.length + 1];
         messages[0] = timestamp;
@@ -1054,7 +1067,7 @@ public class ServerFixture {
     }
 
     private void registerIssueAnticipateTransitionResponses() {
-      mockServer.stubFor(post("/api/issues/anticipated_transitions?projectKey=projectKey").willReturn(aResponse().withStatus(200)));
+      mockServer.stubFor(post("/api/issues/anticipated_transitions?projectKey=projectKey").willReturn(aResponse().withStatus(statusCode)));
     }
 
     private void registerSourceApiResponses() {
@@ -1076,7 +1089,7 @@ public class ServerFixture {
 
     private void registerDevelopersApiResponses() {
       if (smartNotificationsSupported) {
-        mockServer.stubFor(get("/api/developers/search_events?projects=&from=").willReturn(aResponse().withStatus(200)));
+        mockServer.stubFor(get("/api/developers/search_events?projects=&from=").willReturn(aResponse().withStatus(statusCode)));
       }
     }
 
@@ -1115,7 +1128,7 @@ public class ServerFixture {
       mockServer.stubFor(get(url)
         .willReturn(aResponse().withResponseBody(protobufBody(Components.SearchWsResponse.newBuilder()
           .addAllComponents(projectsByProjectKey.entrySet().stream().map(entry -> Components.Component.newBuilder().setKey(entry.getKey()).setName(entry.getValue().name).build())
-            .collect(toList()))
+            .toList())
           .setPaging(Common.Paging.newBuilder().setTotal(projectsByProjectKey.size()).build())
           .build()))));
     }
@@ -1142,7 +1155,7 @@ public class ServerFixture {
         mockServer.stubFor(get(url)
           .willReturn(aResponse().withResponseBody(protobufBody(Components.TreeWsResponse.newBuilder()
             .addAllComponents(
-              project.relativeFilePaths.stream().map(relativePath -> Components.Component.newBuilder().setKey(projectKey + ":" + relativePath).build()).collect(toList()))
+              project.relativeFilePaths.stream().map(relativePath -> Components.Component.newBuilder().setKey(projectKey + ":" + relativePath).build()).toList())
             .setPaging(Common.Paging.newBuilder().setTotal(project.relativeFilePaths.size()).build())
             .build()))));
       });
@@ -1167,7 +1180,7 @@ public class ServerFixture {
 
     private void registerTokenApiResponse() {
       tokensRegistered.forEach(
-        tokenName -> mockServer.stubFor(post("/api/user_tokens/revoke").withRequestBody(WireMock.containing("name=" + tokenName)).willReturn(aResponse().withStatus(200))));
+        tokenName -> mockServer.stubFor(post("/api/user_tokens/revoke").withRequestBody(WireMock.containing("name=" + tokenName)).willReturn(aResponse().withStatus(statusCode))));
     }
 
     public void shutdown() {
